Merged in feature/CAP-321_soft-fail-stripe-required-fields (pull request #275)
Feature/CAP-321 soft fail stripe required fields

* CAP321 - director option will be ignored for now

* CAP321 - validation on required data based on business type. to follow the rules from https://docs.google.com/spreadsheets/d/1zcF_8bytiMkVebIxtR9VYN-kyXLI1L-tvahcvESv9Qk/edit?pli=1#gid=592003442

* CAP321 - otp validation for emails that exists already on the system. return 200 status with a message emailExists : true

* Merge branch 'master' into feature/CAP-321_soft-fail-stripe-required-fields

* CAP321 - changes to required fields for account or owner. changes to required documents. Add endpoint list owners, delete owners, update business.

* Merge branch 'master' into feature/CAP-321_soft-fail-stripe-required-fields

# Conflicts:
#	src/main/java/com/clearspend/capital/controller/business/BusinessController.java

* CAP321 - remove '- root' addition from main allocation

* CAP321 - remove '- root' addition from main allocation

* Merge branch 'master' into feature/CAP-321_soft-fail-stripe-required-fields


Approved-by: Slava Akimov